--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html {overflow-y: scroll;}
 
+strong { font-weight: bold; }
+
 h1 {font: 30px 'Ubuntu', sans-serif; font-weight: 200;}
 h2 {font: 20px 'Ubuntu', sans-serif; font-weight: 200;}
 
@@ -54,7 +56,7 @@ a.large:active {font: 30px 'Ubuntu', sans-serif; font-weight: bold; color: #145B
 hr {border: none; height: 1px; color: #333; /* old IE */ background-color: #333; /* Modern Browsers */}
 
 /* #footer {font: 15px 'Ubuntu', sans-serif; font-weight: 300; background-color: #c8d3d9; color:black; clear:both; text-align:center; vertical-align: middle; height: 50px; line-height: 50px;} */
-#footer {font: 15px 'Ubuntu', sans-serif; font-weight: 300; text-align: right; line-height: 40px; vertical-align: middle; width: 800px; height: 40px; display: inline-block; padding-right: 10px; padding-left: 10px; border-style: solid; border-color: #BFDBFF;}
+#footer {font: 15px 'Ubuntu', sans-serif; font-weight: 300; text-align: right; line-height: 40px; vertical-align: middle; width: 800px; height: 40px; display: inline-block; padding-right: 10px; padding-left: 10px;}
 #content {width: 800px; margin: 0 auto; margin-left: auto ; margin-right: auto ; margin-top: 20px;}
 #center_img {margin-left: auto; margin-right: auto; display: block; margin-top: 10px; margin-bottom: 10px;}
 #center_text {text-align: center; padding-top: 10px; padding-bottom: 10px;}
